fix for wrapping text on location feild on share page

--- a/css/theme.less
+++ b/css/theme.less
@@ -1567,6 +1567,14 @@ fieldset.ui-controlgroup{
        }
     }
     .upload-image-location{
+         .location-name,
+            .foursquare-venue-name{
+                height: 40px;
+                white-space: normal;
+                display: inline-block;
+                vertical-align: middle;
+            }
+        
         .ui-btn {
             margin: @padding-page-inset 0;
             font-family: @txt-font-special;
@@ -1621,7 +1629,10 @@ fieldset.ui-controlgroup{
                 padding-top: 0;
                 padding-bottom: 0;
                  text-align: left;
+                padding-right: 36px;
+                white-space: normal;
                 .ui-btn-text{
+                    white-space: normal;
                     line-height: @gfx-action-icon-sprite-grid;
                     .ui-icon{
                         position: absolute;
